Fixed text spacing to correctly align with image.

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ header p {
   margin-top: 5%;
   color: #937b92;
   font-weight: 500;
+  width: 90%;
+  font-size: 0.9em;
 }
 
 .ratings {
