--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -20,5 +20,7 @@ header {
         
         color: $clr-greyish-magenta;
         font-weight: 500;
+        width: 90%;
+        font-size: 0.9em;
     }
 }
